# xarm_ws

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/d435i_xarm_setup/: findobj2d_grasp_api  findobj2d_grasp_moveit  obj2base
devel/lib/pkgconfig/: camera_demo.pc  d435i_xarm_setup.pc  dual_xarm6_moveit_config.pc  multi_xarm5.pc  run_recorded_traj.pc  xarm5_gripper_moveit_config.pc  xarm5_moveit_config.pc  xarm5_vacuum_gripper_moveit_config.pc  xarm6_gripper_moveit_config.pc  xarm6_moveit_config.pc  xarm6_vacuum_gripper_moveit_config.pc  xarm7_gripper_moveit_config.pc  xarm7_moveit_config.pc  xarm7_redundancy_res.pc  xarm7_vacuum_gripper_moveit_config.pc  xarm_api.pc  xarm_bringup.pc  xarm_controller.pc  xarm_description.pc  xarm_gazebo.pc  xarm_gripper.pc  xarm_interface.pc  xarm_msgs.pc  xarm_planner.pc  xarm_sdk.pc
devel/lib/run_recorded_traj/: xarm_traj_test
devel/lib/xarm_api/: example1_report_norm  move_test  servo_cartesian_test  test_tool_modbus  test_xarm_ros_client  test_xarm_states  test_xarm_velo_move
devel/lib/xarm_controller/: sample_motion  xarm_combined_traj_controller  xarm_traj_controller
devel/lib/xarm_gripper/: gripper_action_server  gripper_client
devel/lib/xarm_interface/: xarm_move  xarm_pub  xarm_sub
devel/lib/xarm_planner/: xarm_gripper_planner  xarm_simple_planner  xarm_simple_planner_test
devel/share/camera_demo/cmake/: camera_demoConfig.cmake
devel/share/d435i_xarm_setup/cmake/: d435i_xarm_setupConfig.cmake
devel/share/dual_xarm6_moveit_config/cmake/: dual_xarm6_moveit_configConfig.cmake
devel/share/multi_xarm5/cmake/: multi_xarm5Config.cmake
devel/share/run_recorded_traj/cmake/: run_recorded_trajConfig.cmake
devel/share/xarm5_gripper_moveit_config/cmake/: xarm5_gripper_moveit_configConfig.cmake
devel/share/xarm5_moveit_config/cmake/: xarm5_moveit_configConfig.cmake
devel/share/xarm5_vacuum_gripper_moveit_config/cmake/: xarm5_vacuum_gripper_moveit_configConfig.cmake
devel/share/xarm6_gripper_moveit_config/cmake/: xarm6_gripper_moveit_configConfig.cmake
devel/share/xarm6_moveit_config/cmake/: xarm6_moveit_configConfig.cmake
devel/share/xarm_api/cmake/: xarm_apiConfig.cmake
src/xarm_interface/: CMakeLists.txt  TSC를 알아낸 과정.md
src/xarm_interface/include/: xarmex.hpp
src/xarm_interface/my_doc/: TSC를 알아낸 과정.md  현재 orientation값 받기.md  현재 orientation값 받기_1번,2번.md
src/xarm_interface/src/: xarm_move.cpp  xarm_pub.cpp  xarm_sub.cpp
(+38 files in other folders)
